--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,13 @@
 {% include header.html %}
 
 <div class="post-body">
-  <div class="author-box"><a href= "/">
-    <div class="avatar-small"></div>
+  <div class="author-box">
+    <a class="avatar-link" href= "/"><div class="avatar-small"></div></a>
     <div class="avatar-text">
-      <div class="author-name">Dan Winter</div>
+      <div class="author-name"><a href= "/">Dan Winter</a></div>
       <div class="post-date">{{ page.date | date: '%B %d, %Y' }}</div>
     </div>
-  </div></a>
+  </div>
   <h1 class="page-title">{{ page.title }}</h1>
 
 <div class="post-page-content">
